[package]
name = "async-ping-udp"
version = "0.1.0"
authors = ["Luca Cominardi <luca.cominardi@gmail.com>", "Gabriele Baldoni <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
clap = { version = "3.1", features = ["derive"] }