[package]
name = "tokio-ping-udp"
version = "0.1.0"
authors = ["Luca Cominardi <luca.cominardi@gmail.com>", "Gabriele Baldoni <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1", features = ["derive"] }